sfSandBoxCode/force-app/main/default/objects/Inventory_Replenishment_Tracker__c/Inventory_Replenishment_Tracker__c.object-meta.xml
<CustomObject>
    <description>Object for tracking replenishment requests for stock items. Tracks using Work Orders and PRs</description>
    <label>Inventory Replenishment Tracker</label>
    <nameField>
        <displayFormat>IRT-{000000}</displayFormat>
        <label>Inventory Replenishment Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Replenishment Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>