sfSandBoxCode/force-app/main/default/objects/Inventory_Replenishment_Tracker__c/fields/Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item__c</fullName>
    <label>Inventory Item</label>
    <referenceTo>Inventory_Item__c</referenceTo>
    <relationshipLabel>Inventory Replenishment Trackers</relationshipLabel>
    <relationshipName>Inventory_Replenishment_Trackers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>