sfSandBoxCode/force-app/main/default/objects/Inventory_Replenishment_Tracker__c/fields/PO_Line__c.field-meta.xml
<CustomField>
    <fullName>PO_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PO Line</label>
    <referenceTo>Purchase_Order_Line_Item__c</referenceTo>
    <relationshipLabel>Inventory Replenishment Trackers</relationshipLabel>
    <relationshipName>Inventory_Replenishment_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>