sfSandBoxCode/force-app/main/default/objects/Inventory_Replenishment_Tracker__c/fields/Procurement_Request_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Request_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Procurement Request Line Item</label>
    <referenceTo>PTS_Line_Item__c</referenceTo>
    <relationshipLabel>Inventory Replenishment Trackers</relationshipLabel>
    <relationshipName>Inventory_Replenishment_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>