sfSandBoxCode/force-app/main/default/objects/Inventory_Replenishment_Tracker__c/fields/Quantity_Pending__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Pending__c</fullName>
    <label>Quantity Pending</label>
    <precision>18</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Number</type>
</CustomField>