sfSandBoxCode/force-app/main/default/objects/Inventory_Replenishment_Tracker__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>Inventory Replenishment Trackers</relationshipLabel>
    <relationshipName>Inventory_Replenishment_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>