sfSandBoxCode/force-app/main/default/objects/Inventory_Replenishment_Tracker__c/recordTypes/Purchase_Request_Replenishment.recordType-meta.xml
<RecordType>
    <fullName>Purchase_Request_Replenishment</fullName>
    <active>true</active>
    <label>Purchase Request Replenishment</label>
</RecordType>