sfSandBoxCode/force-app/main/default/objects/Inventory_Replenishment_Tracker__c/recordTypes/Work_Order_Replenishment.recordType-meta.xml
<RecordType>
    <fullName>Work_Order_Replenishment</fullName>
    <active>true</active>
    <label>Work Order Replenishment</label>
</RecordType>